[package]
name = "wharf"
version = "0.3.0"
edition = "2021"
authors = ["DukeofStars"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.2", features = ["derive"] }
colored = "2.0.0"
compression = "0.1.5"
tar = "0.4.38"
